# Madoka

./: .gitignore  CMakeLists.txt  README.md
include/: MThread.h  Mthread.h  Types.h  thread_header.h  thread_help.h  thread_helper.h  type_traits.h
src/: MCondition_variable.h  MFuture.h  MSharedPtr.h  MShared_Mutex.h  MThread  MThread.h  Memory.h  Mutex.h
src/allocator/: allocator.h
src/delegate/: delegate.h  delegateBase.h  delegateInstance.h  delegateInstanceInterface.h  delegateInstancesimpl.h
src/functor/: functor.h  functorHelp.h
test/: test_condition_variable.cpp  test_condition_variable_wait_for.cpp  test_condition_variable_wait_until.cpp  test_functor.cpp  test_lock.cpp  test_lock_guard.cpp  test_mutex.cpp  test_recursive_mutex.cpp  test_this_thread.cpp  test_thread.cpp  test_timed_mutex.cpp  test_try_lock.cpp  test_unique_lock.cpp
